2005-09-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/SimpleAttributeSet/containsChecksParent.java: New test.

2005-09-27  Tom Tromey  <tromey@redhat.com>

	* .classpath: Changed where Classpath's class files are found.

2005-09-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/JTextArea/isValidChecks.java: Added copyright
	info.
	* gnu/testlet/javax/swing/JLayeredPane/defaultLayoutManager.java:
	Fixed copyright info.

2005-09-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/SimpleAttributeSet/removeAttributesOnlyIfMatch: Changed copyright info to reflect proper author.
	* gnu/testlet/javax/swing/JEditorPane/getScrollableTrackvs.java:
	Likewise.
	* gnu/testlet/javax/swing/JFrame/glassPaneLayout.java: Likewise.

2005-09-27  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/SimpleAttributeSet/removeAttributesOnlyIfMatch.java:
	New test.

2005-09-27  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicLookAndFeel/initComponentDefaults.java:
	Import Color.

2005-09-26  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/JEditorPane: New directory.
	* gnu/testlet/javax/swing/JEditorPane/getScrollableTrackvs.java:
	New test.

2005-09-24  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/DefaultComboBoxModel/addElement.java
	(index0, index1, eventType): removed fields,
	(events): new field,
	(contentsChanged): use new events field,
	(intervalAdded): likewise,
	(intervalRemoved): likewise,
	(test): check for multiple events.

2005-09-23  Lillian Angel  <langel@redhat.com>

	* mauve/gnu/testlet/javax/swing/plaf/basic/BasicLookAndFeel/initComponentDefaults.java: Fixed syntax
	error.

2005-09-23  Lillian Angel  <langel@redhat.com>

	* mauve/gnu/testlet/javax/swing/plaf/basic/BasicLookAndFeel/initComponentDefaults.java: Added checks 
	for Tree.textForeground and Tree.textBackground.